--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 
 jdk:
   - openjdk8
+  - oraclejdk8
 
 branches:
   only:
@@ -14,3 +15,6 @@ before_script:
 
 script: 
   - mvn clean package
+
+after_success:
+  - echo "Process terminated successfully"
