--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - ls -la # print the contents of the current working directory
 
 script: 
-  - mvn clean package
+  - mvn clean package jacoco:report
 
 after_success:
   - echo "Process terminated successfully"
