--- a/seip2020_practical_assignments/pom.xml
+++ b/seip2020_practical_assignments/pom.xml
@@ -53,5 +53,6 @@
 	<modules>
 		<module>gradeshistogram</module>
 		<module>unittesting</module>
+		<module>codeanalyzer</module>
 	</modules>
 </project>
