--- a/seip2020_practical_assignments/codeanalyzer/pom.xml
+++ b/seip2020_practical_assignments/codeanalyzer/pom.xml
@@ -18,7 +18,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>demo.DemoClient</mainClass>
+							<mainClass>client.Client</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
